@@ -1,3 +1,6 @@
+# next
+- Redesigns destructive actions confirmation dialogs
+
 # 4.0
 - Adds removing a playlist
 - Adds saving the queue as playlist
